# grpc-cloud-run-example

./: .gitignore  .sanity_check.sh  Dockerfile  README.md  calculator.proto  client.py  deploy.sh
golang/: .gitignore  Dockerfile  README.md  go.mod  go.sum
golang/client/: client.go  main.go
golang/protos/: calculator.proto
golang/server/: main.go  server.go
node/: Dockerfile  README.md  client.js  package.json  server.js
python/: .dockerignore  .gitignore  Dockerfile  README.md  requirements.txt  server.py
rust/: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
rust/src/: main.rs
rust/src/protos/: mod.rs
